--- a/views/index.html
+++ b/views/index.html
@@ -17,7 +17,9 @@
 <div class="container">
     <h1>GuestBook</h1>
     <p class="lead">hello world</p>
+
     <form method="post" action="index.php">
+
         <div class="form-group">
             <label for="comment">This is the text area</label>
             <textarea id="comment" name="comment" class="form-control" rows="3"></textarea>
@@ -25,6 +27,7 @@
         <button type="submit" class="btn btn-default">Submit</button>
     </form>
     <?php
+        $comments = array_reverse($comments);
         foreach($comments as $comment) {
             echo $comment . "<br>";
             }
